--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - ./gitlab/volumes/logs:/var/log/gitlab
       - ./gitlab/volumes/data:/var/opt/gitlab
     shm_size: '1gb'
-  runner:
+  base_runner:
     image: ${RUNNER_IMAGE}:${RUNNER_IMAGE_TAG}
     build: ./runner
     deploy:
@@ -45,5 +45,25 @@ services:
       gitlab:
         condition: service_healthy
     command: ["gitlab-runner", "run", "--user=root"]
+  docker_runner:
+    image: gitlab/gitlab-runner:alpine
+    build: ./runner
+    deploy:
+      mode: replicated
+      replicas: 2
+    environment:
+      GITLAB_URL: '#{EXTERNAL_URL}#'
+      GIT_SSL_NO_VERIFY: "true"
+    restart: 'always'
+    networks:
+      - gitlab
+    volumes:
+      - ./runner/volumes/config:/etc/gitlab-runner
+      - /var/run/docker.sock:/var/run/docker.sock
+    stdin_open: true
+    tty: true
+    depends_on:
+      gitlab:
+        condition: service_healthy
 networks:
   gitlab:
