--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     build: ./runner
     deploy:
       mode: replicated
-      replicas: 2
+      replicas: 1
     environment:
       GITLAB_URL: '#{EXTERNAL_URL}#'
       GIT_SSL_NO_VERIFY: "true"
@@ -44,13 +44,14 @@ services:
     depends_on:
       gitlab:
         condition: service_healthy
+        restart: true
     command: ["gitlab-runner", "run", "--user=root"]
   docker_runner:
     image: gitlab/gitlab-runner:alpine
     build: ./runner
     deploy:
       mode: replicated
-      replicas: 2
+      replicas: 1
     environment:
       GITLAB_URL: '#{EXTERNAL_URL}#'
       GIT_SSL_NO_VERIFY: "true"
@@ -65,5 +66,6 @@ services:
     depends_on:
       gitlab:
         condition: service_healthy
+        restart: true
 networks:
   gitlab:
