updated cert gen

--- a/.env_template
+++ b/.env_template
@@ -4,3 +4,4 @@ EXTERNAL_URL=<external_url: gitlab.domainName.local>
 HOSTNAME=<hostname: gitlab.domainName.local>
 RUNNER_IMAGE=<runner_image: org/image_name>
 RUNNER_IMAGE_TAG=<runner_image_tag: 0.0.1>
+IP_ADDRESS=<ip_address: IP of your VM>
