--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,12 +24,11 @@ services:
       - ./gitlab/volumes/logs:/var/log/gitlab
       - ./gitlab/volumes/data:/var/opt/gitlab
     shm_size: '1gb'
-  docker_runner:
-    image: gitlab/gitlab-runner:alpine
-    build: ./runner
+  base_runner:
+    image: ${RUNNER_IMAGE}:${RUNNER_IMAGE_TAG}
     deploy:
       mode: replicated
-      replicas: 1
+      replicas: 2
     environment:
       GITLAB_URL: 'https://${EXTERNAL_URL}'
       GIT_SSL_NO_VERIFY: "true"
@@ -39,8 +38,26 @@ services:
     volumes:
       - ./runner/volumes/config:/etc/gitlab-runner
       - /var/run/docker.sock:/var/run/docker.sock
-    stdin_open: true
+    depends_on:
+      gitlab:
+        condition: service_healthy
     tty: true
+    stdin_open: true
+    command: ["bash"]
+  docker_runner:
+    image: gitlab/gitlab-runner:latest
+    deploy:
+      mode: replicated
+      replicas: 2
+    environment:
+      GITLAB_URL: 'https://${EXTERNAL_URL}'
+      GIT_SSL_NO_VERIFY: "true"
+    restart: 'always'
+    networks:
+      - gitlab
+    volumes:
+      - ./runner/volumes/config:/etc/gitlab-runner
+      - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
       gitlab:
         condition: service_healthy
